--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
